--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="https://kit.fontawesome.com/fc8e28a7e0.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./img/icons/21.svg" type="image/png">
   <title>Weather App</title>
 </head>
 <body>
